# AI-snake

./: .replit  main.py  models.py  pyproject.toml  replit.nix  reset_lock.tmp  snake_ai_state.json
.config/pulse/: cookie
ai/: agent.py  competition.py  dqn_agent.py
game/: constants.py  multiplayer_game.py  snake_game.py
utils/: state_manager.py  visualization.py
web/: app.py
web/templates/: dashboard.html  multiplayer.html
