[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-socketio>=5.5.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pygame>=2.6.1",
    "python-socketio>=5.12.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
